// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layer adds custom close node 1`] = `
<div
  data-reactroot=""
  class="StyledGrommet__StyledGrommet-hSgblC bDRgJE"
>
  <div
    class="StyledLayer__StyledLayer-loUkrt kHvBSa"
    tabindex="-1"
  >
    <div
      class="StyledLayer__StyledContainer-iKmEpv dDNYRn"
      tabindex="-1"
      aria-hidden="true"
    >
      <div>
        custom closer
      </div>
      <!-- react-text: 5 -->
      This is a Layer
      <!-- /react-text -->
    </div>
  </div>
</div>
`;

exports[`Layer is accessible 1`] = `
<div
  id="body-node"
>
  <input
    tabindex="-1"
  />
  <input
    tabindex="-1"
    data-tabindex="10"
  />
</div>
`;

exports[`Layer is accessible 2`] = `
<div
  id="layer-node"
>
  <!-- react-text: 9 -->
  This is a layer
  <!-- /react-text -->
  <input />
</div>
`;

exports[`Layer is accessible 3`] = `
<div
  id="body-node"
>
  <input />
  <input
    tabindex="10"
  />
</div>
`;

exports[`Layer mounts 1`] = `
<div
  data-reactroot=""
  class="StyledGrommet__StyledGrommet-hSgblC bDRgJE"
>
  <span
    style="display: none;"
  />
</div>
`;

exports[`Layer renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`Layer renders with custom message 1`] = `
<div
  data-reactroot=""
  class="StyledGrommet__StyledGrommet-hSgblC bDRgJE"
>
  <div
    class="StyledLayer__StyledLayer-loUkrt kHvBSa"
    tabindex="-1"
  >
    <div
      class="StyledLayer__StyledContainer-iKmEpv fNuFNM"
      tabindex="-1"
      aria-hidden="true"
    >
      <div
        class="StyledLayer__StyledCloser-bLTudO dwaTZV"
      >
        <button
          class="StyledButton__StyledButton-cmJswE bErBpU"
          tabindex="0"
          aria-label="Fechar Modal"
          type="button"
        >
          <span
            class="StyledButton__StyledIcon-hqHdWF bnFLWK"
          >
            <svg
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
              height="24px"
              role="img"
            >
              <path
                fill="none"
                stroke="#333"
                stroke-width="2"
                d="M3,3 L21,21 M3,21 L21,3"
              />
            </svg>
          </span>
        </button>
      </div>
      <!-- react-text: 9 -->
      This is a layer
      <!-- /react-text -->
    </div>
  </div>
</div>
`;
